Signed-off-by: megaratta <maszion1@gmail.com>

--- a/config.properties
+++ b/config.properties
@@ -11,6 +11,7 @@ sftp.ssh.passphrase=
 #File
 file.name.dateformat=yyyyMMdd
 file.name.type=TXT
+file.name.prefix=TRN_PH_PAY_,TRN_PH_WHT_
 
 #Log4j
 log.config.file=log4j.properties
