--- a/log4j.properties
+++ b/log4j.properties
@@ -1,9 +1,10 @@
 # Root logger option
-log4j.rootLogger=DEBUG, stdout, rollingFile
+log4j.rootLogger=ALL, stdout, rollingFile
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.Threshold=INFO
 log4j.appender.stdout.layout=com.jcabi.log.MulticolorLayout
 log4j.appender.stdout.layout.Levels=INFO:1;10,DEBUG:1;33
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%color{%p}] %c{1}:%L - %color{%m%n} 
@@ -14,6 +15,7 @@ log4j.appender.rollingFile.File=logs/application.log
 log4j.appender.rollingFile.DatePattern='.'yyyy-MM-dd
 log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.rollingFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
+log4j.appender.rollingFile.Threshold=DEBUG
 #log4j.appender.rollingFile.MaxFileSize=100KB
 #log4j.appender.rollingFile.MaxBackupIndex=5
 log4j.appender.rollingFile.append=true
